<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Counting</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="count">Touch the cows!</string>
    <string name="title_activity_counting_score">CountingScore</string>
    <string name="congrats">GOOD JOB!</string>
    <string name="trophy">trophy</string>

    
    
    <string name="progress_app">Progress</string>    
         
    <string name="see_progress">See Progress!</string>
    <string name="select_game">Select Game!</string>
    <string name="switch_player">Switch Player!</string>
    <string name="OR">OR</string>
    <string name="Welcome">Welcome! Please choose an option:</string>
    
        
    <string name="progress_layout">PROGRESS</string>
    <string name="select_game_layout">SELECT GAME</string>
    <string name="select_user_layout">SELECT_USER</string>
        
    <string name="levels_working">Levels you are still working on:</string>
    <string name="levels_completed">Levels you have completed:</string>
        

    <string name="completed_1">Counting Level 1</string>
    <string name="completed_2">Counting Level 2</string>
    <string name="completed_3">Addition Level 1</string>
    <string name="game_1">Tracing Level 3</string>
    <string name="game_2">Addition Level 2</string>
    <string name="game_3">Addition Level 3</string>
    
  
    <string name="name">What is your name?</string>
    <string name="pickAnimal">Pick your animal icon:</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    
    <string name="practice">Activity First</string>
    
    
    
   
   <string name="emily">Emily</string>
   <string name="imageview1">ImageView1</string>
   <string name="textview1">TextView1</string>
   <string name="textview2">TextView2</string>
   <string name="textview3">TextView3</string>
   <string name="textview4">TextView4</string>
   <string name="new_player">New Player</string>
   <string name="isidora">Isidora</string>
   <string name="jack">Jack</string>
   <string name="imageview4">ImageView4</string>
   <string name="imageview3">ImageView3</string>
   <string name="imageview2">ImageView2</string>
   <string name="title_activity_option">OptionActivity</string>
   <string name="trophies_">Trophies!</string>
   <string name="trophyimg">trophyImg</string>
   <string name="trophytextview">TrophyTextView</string>
   <string name="exit">exit</string>
   <string name="play">play</string>
   <string name="playimg">playimg</string>
   <string name="exitimg">exitimg</string>
   
   <string name="progress">Progress</string>
   <string name="progressimg">progressimg</string>
   
   
    <string name="BarGraph">BarGraph</string>
    <string name="chart">Chart</string>
    <string name="goBack">RETURN</string>  

    
    <string name="title_activity_counting_game">CountingGameActivity</string>
    <string name="go_user_page">Go to user page</string>
    <string name="save_game">Stop and Save the game</string>
    <string name="play_sound">Read instructions</string>
    <string name="title_activity_random_counting">RandomCountingActivity</string>
    <string name="star">Star</string>
    <string name="game_over_msg">Game Over!</string>
    <string name="sad_face">Sad Face</string>
    
    
</resources>
