<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs1635.pitt.edu.mal181.groupproject4.OptionActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/trophytextview"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="32dp"
                android:background="@drawable/button_bg1"
                android:gravity="center"
                android:text="@string/trophies_"
                android:onClick="onClick"
				android:clickable="true" />

            <ImageView
                android:id="@+id/trophyimg"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/trophy" />
        	</RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/play"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="32dp"
                android:background="@drawable/button_bg1"
                android:gravity="center"
                android:text="Play!"
                android:onClick="onClick"
				android:clickable="true"/>

            <ImageView
                android:id="@+id/playimg"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/numbers" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="32dp"
                android:background="@drawable/button_bg1"
                android:gravity="center"
                android:text="@string/progress"
                android:onClick="onClick"
				android:clickable="true"/>

            <ImageView
                android:id="@+id/progressimg"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/progressimg" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="105dp" >

            <TextView
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="bottom"
                android:text="@string/exit"
                android:textColor="#CC0000"
                android:textSize="35sp" 
                android:onClick="onClick"
				android:clickable="true"/>

            <ImageView
                android:id="@+id/exitimg"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="60dp"
                android:src="@drawable/exit" />

        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>
